<resources>
    <string name="app_name" translatable="false">Coa.Tracker</string>
    <string name="lblEndCharacter">:</string>
    <string name="lblEquipmentTag">Equipment TAG</string>
    <string name="lblEquipmentType">Equipment type</string>
    <string name="lblCommissioningMessage">Comments</string>
    <string name="lblRadioGroupEquipmentStatus">Equipment status</string>
    <string name="lblStringEquipmentOK">Ok</string>
    <string name="lblStringEquipmentNOK">Not ok</string>
    <string name="lblStringAcceptOutOfSpecification">Accept Out of Spec</string>
    <string name="lblLstEquipmentTypeValve">Valve</string>
    <string name="lblLstEquipmentTypeDSV">Double Seat Valve</string>
    <string name="lblLstEquipmentTypeMotor">Motor</string>
    <string name="lblLstEquipmentTypeFC">Frequency Converter</string>
    <string name="lblLstEquipmentTypeAI">Analog Sensor</string>
    <string name="lblLstEquipmentTypeDI">Digital Sensor</string>
    <string name="lblLstEquipmentTypeInvalid">Invalid</string>
    <string name="lblAuthorName" translatable="false">Fillipe Cerdan</string>
    <string name="lblAuthorSubject">Specialization in JAVA and its technologies.</string>
    <string name="lblAuthorEmail" translatable="false">fillipecerdan@alunos.utfpr.edu.br</string>
    <string name="lblUniversityName" translatable="false">UTFPR - Universidade Tecnologica Federal do Paraná</string>
    <string name="lblAppDescription">This app is intended to be used as a control for machine commissioning\nIt lets you create a project and assign equipments to it. These equipments have a comment field and a summary of their status.</string>
    <string name="hntCommissioningMessage">Write here the relevant comments about the equipment.\n\n\tE.g.: "Valve's feedback isn't working".</string>
    <string name="msgFieldsCleared">All fields were cleared.</string>
    <string name="msgFieldRequired">"The %s field is required."</string>
    <string name="msgEquipmentSaved">"The equipment was saved."</string>
    <string name="msgProjectSaved">"The project was saved."</string>
    <string name="msgEquipmentClicked">Equipment %s was clicked.\n\nModified on\n%s</string>
    <string name="lblStringAcceptedOutOfSpec">Accepted out of Specification</string>
    <string name="msgInvalidEquipmentTryAgain">Invalid equipment!\nDelete it and try again.</string>
    <string name="msgInvalidProjectIdTryAgain">Invalid project reference!\nTry again.</string>
    <string name="msgDuplicateEquipmentName">Name already exists.\nTry another name or change the other item first.</string>
    <string name="msgDuplicateProjectCode">Code already exists.\nTry another code or change the other item first.</string>
    <string name="msgRemoveItemConfirmationMsg">You are about to delete the item:\n\n\t%s\n\nAre you sure you want to proceed?\n(This action cannot be undone.)</string>
    <string name="msgNoChanges">No changes were made to the item.\n\nYou can try again or use the menu above to return.</string>
    <string name="msgItemNotFound">Item not found.\nTry again.</string>
    <string name="msgProjectIsBeingUsed">This project has equipments and therefore cannot be deleted.\nDelete all project\'s equipments and try again.</string>
    <string name="lblStringAbout">About</string>
    <string name="lblStringAdd">Add</string>
    <string name="lblStringSave">Salve</string>
    <string name="lblStringClearAll">Clear</string>
    <string name="lblStringReturn">Return</string>
    <string name="lblStringEdit">Edit</string>
    <string name="lblStringDelete">Delete</string>
    <string name="lblStringListEquipment">Equipment List</string>
    <string name="lblStringPreferences">Preferences</string>
    <string name="lblStringOrderBy">Order by</string>
    <string name="lblStringTagOnly">TAG only</string>
    <string name="lblStringDefault">Default</string>
    <string name="lblStringNOKFirst">NOK top</string>
    <string name="lblStringOKFirst">OK top</string>
    <string name="lblStringMostRecent">Most recent</string>
    <string name="lblStringSuggestFields">Suggest fields</string>
    <string name="lblProjectCode">Project Code</string>
    <string name="lblProjectName">Project Name</string>
    <string name="lblProjectCustomer">Customer Name</string>
    <string name="lblProjectLocation">Project Location</string>
    <string name="lblProjectStartYear">Start Year</string>
    <string name="hntStartYear" translatable="false">2024</string>
    <string name="hntProjectLocation" translatable="false">São Paulo/SP - BR</string>
    <string name="hntCustomerName">ACMEBev Inc.</string>
    <string name="hntProjectName" translatable="false">CCMX 160/5</string>
    <string name="hntProjectCode" translatable="false">K-89XXXXXX-NNNNN</string>
    <string name="lblStringYearBetweenMINMAX">The specified start year must be between %d and %d</string>
    <string name="lblStringSwitchView">Switch View</string>
    <string name="lblStringProjects">Projects</string>
    <string name="lblStringEquipments">Equipments</string>
    <string name="lblStringListProject">Project List</string>
    <string name="lblStringWarningTitle">Warning!</string>
    <string name="lblStringConfirmationTitle">Confirm action.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
