<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuEditSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/lblStringSave"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuEditClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/lblStringClearAll"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuEditPreferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/lblStringPreferences">
        <menu
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <item
                android:id="@+id/menuEditSuggestFields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="true"
                android:title="@string/lblStringSuggestFields" />
        </menu>
    </item>
</menu>