<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/actViewEquipment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EquipmentEditActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/actEquipmentEditRoot">

        <TextView
            android:id="@+id/lblEquipmentTag"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/lblEquipmentTag"
            app:flow_verticalAlign="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtEquipmentTag"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/lblEquipmentTag"
            app:layout_constraintTop_toBottomOf="@+id/lblEquipmentTag" />

        <TextView
            android:id="@+id/lblEquipmentType"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/lblEquipmentType"
            app:flow_verticalAlign="center"
            app:layout_constraintStart_toStartOf="@+id/lblEquipmentTag"
            app:layout_constraintTop_toBottomOf="@+id/txtEquipmentTag" />

        <Spinner
            android:id="@+id/spnEquipmentType"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:entries="@array/lstEquipmentType"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/lblEquipmentTag"
            app:layout_constraintTop_toBottomOf="@+id/lblEquipmentType" />

        <RadioGroup
            android:id="@+id/rdGrpEquipmentStatus"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/lblEquipmentTag"
            app:layout_constraintTop_toBottomOf="@+id/spnEquipmentType">

            <RadioButton
                android:id="@+id/radioEquipmentOK"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/lblStringEquipmentOK" />

            <RadioButton
                android:id="@+id/radioEquipmentNOK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblStringEquipmentNOK" />
        </RadioGroup>

        <EditText
            android:id="@+id/txtCommissioningMessage"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/hntCommissioningMessage"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/lblEquipmentTag"
            app:layout_constraintTop_toBottomOf="@+id/lblCommissioningMessage" />

        <TextView
            android:id="@+id/lblCommissioningMessage"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/lblCommissioningMessage"
            app:layout_constraintStart_toStartOf="@+id/lblEquipmentTag"
            app:layout_constraintTop_toBottomOf="@+id/rdGrpEquipmentStatus" />

        <CheckBox
            android:id="@+id/chkAcceptedOutOfSpecification"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/lblStringAcceptOutOfSpecification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/lblEquipmentTag"
            app:layout_constraintTop_toBottomOf="@+id/txtCommissioningMessage" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
