<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/txtAdptPrjCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:width="140dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/hntProjectCode" />

        <TextView
            android:id="@+id/txtAdptPrjName"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:width="200dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toBottomOf="@+id/txtAdptPrjCode"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtAdptPrjCode"
            app:layout_constraintTop_toTopOf="@+id/txtAdptPrjCode"
            tools:text="@string/hntProjectName" />

        <TextView
            android:id="@+id/txtAdptPrjYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:width="140dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAdptPrjCode"
            tools:text="@string/hntStartYear" />

        <TextView
            android:id="@+id/txtAdptPrjCustomer"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:width="200dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toBottomOf="@+id/txtAdptPrjYear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtAdptPrjYear"
            app:layout_constraintTop_toTopOf="@+id/txtAdptPrjYear"
            tools:text="@string/hntCustomerName" />

        <TextView
            android:id="@+id/txtAdptPrjLocation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:text="TextView"
            android:textSize="10sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/txtAdptPrjYear"
            app:layout_constraintStart_toStartOf="@+id/txtAdptPrjYear"
            app:layout_constraintTop_toBottomOf="@+id/txtAdptPrjYear"
            tools:text="@string/hntProjectLocation" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>